[gd_scene load_steps=12 format=4 uid="uid://cwqm3qakth8jx"]

[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="2"]
[ext_resource type="Material" path="res://assets/opengameart.org/pistol/Model/M_PaletteAtlas.material" id="3"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dh8grd7s3n8kg" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_snap.tscn" id="6"]
[ext_resource type="Script" path="res://objects/part4/Magazine.gd" id="8"]
[ext_resource type="Material" uid="uid://bhk65nek3p5pn" path="res://materials/highlight_material.tres" id="8_cxkev"]

[sub_resource type="BoxShape3D" id="7"]
margin = 0.005
size = Vector3(0.0240432, 0.124441, 0.0659292)

[sub_resource type="ArrayMesh" id="4"]
resource_name = "Pistol_magazine (empty)"
_surfaces = [{
"aabb": AABB(-0.0110367, -0.0718935, -0.0358374, 0.0220734, 0.117512, 0.0623169),
"attribute_data": PackedByteArray("AADAPQDg7T0AwMU9AODtPQDAxT0A4ME9AKCnPQDg7T0AwMU9AODtPQDAxT0A4O09AMDFPQBA2j0AILs9AKCjPQDAxT0AoKM9AEC8PQBgnz0AgMQ9AGCfPQCAxD0AoMU9AKCnPQDg7T0AQMc9AODtPQBAxz0AQNo9AKCnPQCA8D0AQMc9AIDwPQBAxz0AQNo9AKDCPQDg7T0AQMc9ACC/PQBAxD0A4O09AKDFPQDg7T0AoMU9AIC9PQBAxD0AgPA9AKDFPQCA8D0AoMU9AIC9PQCgwj0AgPA9AEDHPQAgvz0AoNI9AKCmPQDAxT0AoKY9AMDFPQCgpj0AAM09AGCfPQCAxD0AYJ89AIDEPQDAtD0AQMM9AGCfPQBAwz0AoMU9AEC8PQBgnz0AgMQ9AKCjPQCAxD0AwMY9ACC7PQCgoz0AQMM9AGCfPQBAwz0AwLQ9AADNPQBgnz0AgMQ9AMClPQCAxD0AwKU9AODRPQDApT0AgMQ9ACDFPQCAxD0AoKM9AMC8PQCgoz0AgMQ9ACCvPQCAxD0AQLI9AIDPPQAgrz0AgMQ9AIDHPQCAxD0AAK09AGC6PQAArT0AoLs9AIChPQDAxT0AgKE9AIC8PQCAoT0AgMQ9AICiPQCAzz0AgKI9AIDEPQCAoT0AoLs9AIChPQDgzz0AAKM9AMDFPQAAoz0AoL89AODtPQCgvz0A4O09AIC5PQDg7T0AgLk9AODBPQAAwD0A4O09AIC5PQDg7T0AgLk9AODtPQCAuT0AQNo9AKCnPQDg7T0AoL89AODBPQCgvz0A4O09AKC/PQCgoz0AoL89AMDGPQCAuT0AoKM9ACC7PQCgoz0AwLo9AGCfPQDAuj0AoMU9AEC8PQBgnz0AoL89AIDwPQCgvz0AQNo9AKC/PQCAvT0AoL89AODtPQAAuD0A4O09AAC4PQBA2j0AoKc9AODtPQCgvz0AgPA9AKC/PQCAvT0AALg9AIDwPQAAuD0AQNo9AKCnPQCA8D0AALg9ACC/PQCgwj0A4O09AKC5PQCAvT0AoLk9AODtPQBAxD0A4O09AKC5PQCAvT0AoLk9AIDwPQBAxD0AgPA9AAC4PQAgvz0AoMI9AIDwPQCgvz0AoKY9AKC/PQCgpj0AgLk9AKCmPQCAuT0AoKY9AKDSPQCgpj0AwLo9AGCfPQDAuj0AwLQ9AADNPQBgnz0AQLw9AGCfPQAAvD0AYJ89AAC8PQCgxT0AILs9AKCjPQDguj0AoKM9AOC6PQDAxj0AAM09AGCfPQAAvD0AYJ89AAC8PQDAtD0AoL89AMClPQCgvz0AwKU9AODRPQDApT0A4Lo9AMClPQDguj0AwKU9AMC8PQCgoz0A4Lo9ACDFPQDguj0AoKM9AKC/PQAgxT0AoL89AKCjPQCgvz0AIK89AKC/PQBAsj0AgM89ACCvPQDguj0AIK89AOC6PQBAsj0AYLo9AACtPQDguj0AgMc9AOC6PQAArT0AoL89AIDHPQCgvz0AAK09AIC5PQCAoT0AoLs9AIChPQCAvD0AgKE9AIDPPQCAoj0A4Lo9AICiPQCguz0AgKE9AOC6PQCAoT0AgLk9AACjPQDgzz0AAKM9"),
"format": 34359742487,
"index_count": 342,
"index_data": PackedByteArray("NwAfAD4ANwAJAB8APAAKADgAPAAiAAoASwAEAEEABAAlAAgABABLACUABQBSAEAAUwAZAFoABQAQAFIABQANABAAVQAYABUAVQBZABgAAgAOAAYAAgATAA4AUwARABsAEgAPAAwAEgAaAA8AEwACABYAGQBTABsAFwASABQAFwAaABIASQAWAAIASQBUABYAAQBpAEoAAQAdAGkAJgCBAC4AJgBMAIEAOQAnADAAOQA9ACcACwApACEACwAjACkAPwAoADoAPwAgACgAAwAcAAAAAwAHABwAHgB6AGgAHgAsAHoAOQAqACQAOQA7ACoAggA1AC8AggCMADUAKwCDAHkAKwAxAIMAMAAzAC0AMAA2ADMANACEADIANACLAIQAMAA7ADkAMAAtADsAHgA6ACwAHgA/ADoAJAA9ADkAJQA4AAgAJQA8ADgABwA+ABwABwA3AD4AjgBvAFEAjgCVAG8AkwBPAHEAkwCNAE8ARQBLAEEAdABFAE0ASwBFAHQARgBAAFIAUwBaAGMARgBbAFYARgBSAFsAVQBkAFkAVQBhAGQAQwBXAF4AQwBHAFcAUwBmAFwAXwBdAGcAXwBYAF0AXgBgAEMAYwBmAFMAZQBfAGcAZQBiAF8ASQBgAFQASQBDAGAAQgBpAGoAQgBKAGkAdQCBAEwAdQB/AIEAjwBzAJIAjwB+AHMAUAB4AHIAUABuAHgAlAB3AG0AlACRAHcASABsAE4ASABEAGwAawB6AH0AawBoAHoAjwB2AJAAjwBwAHYAggCKAIwAggCAAIoAfACDAIYAfAB5AIMAfgCFAIgAfgB7AIUAiQCEAIsAiQCHAIQAfgCQAHsAfgCPAJAAawCRAJQAawB9AJEAcACPAJIAdACNAJMAdABNAI0ATgCVAI4ATgBsAJUA"),
"material": ExtResource("3"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 150,
"vertex_data": PackedByteArray("USgQvDJsi72FjRm6USgQvDJsi72FjRm6USgQvDJsi72FjRm6YigQvDJsi70wyhK9YigQvDJsi70wyhK9YigQvDJsi70wyhK9YigQvDJsi70wyhK9VigQvPrMIT3xbfm7VigQvPrMIT3xbfm778Xnu1XaOj2y2MS778Xnu1XaOj2y2MS778Xnu1XaOj2y2MS7NtM0vDJsi70wyhK9NtM0vDJsi70wyhK9NtM0vDJsi70wyhK9NtM0vOg8k70wyhK9NtM0vOg8k70wyhK9NtM0vOg8k70wyhK9I9M0vDJsi70yV1g7I9M0vDJsi70yV1g7gDYNvDJsi73nZLs7gDYNvDJsi73nZLs7gDYNvDJsi73nZLs7gDYNvOg8k73nZLs7gDYNvOg8k73nZLs7gDYNvOg8k73nZLs7I9M0vOg8k70yV1g7I9M0vOg8k70yV1g7RigQvHiwDz2I69g8RigQvHiwDz2I69g8RigQvHiwDz2I69g82cXnu1XaOj0TUpY82cXnu1XaOj0TUpY82cXnu1XaOj0TUpY8O8mru1XaOj202MS7O8mru1XaOj202MS7O8mru1XaOj202MS791Pku/rMIT3ybfm791Pku/rMIT3ybfm791Pku/rMIT3ybfm7Jcmru1XaOj0TUpY8Jcmru1XaOj0TUpY8Jcmru1XaOj0TUpY82lPku9GAFT0T88882lPku9GAFT0T88882lPku9GAFT0T88889VPku/rMIT0S2ay79VPku/rMIT0S2ay79VPku/rMIT0S2ay73VPku6lpuzxz8rM83VPku6lpuzxz8rM83VPku6lpuzxz8rM8+FPku/sB1DzJbQ68+FPku/sB1DzJbQ68+FPku/sB1DzJbQ68VigQvKdTLj1RI9+7VigQvKdTLj1RI9+79lPku6dTLj3i2Li73VPku5MtKD2TIrM83VPku5MtKD2TIrM891Pku6dTLj1SI9+791Pku6dTLj1SI9+7SCgQvGdFJT3Onrc8SCgQvGdFJT3Onrc8GCVbsjJsi70xyhK9GCVbsjJsi70xyhK9UygQPDJsi737jRm6UygQPDJsi737jRm6UygQPDJsi737jRm6RigQPDJsi70yyhK9RigQPDJsi70yyhK9RigQPDJsi70yyhK9RigQPDJsi70yyhK98YeFMDJsi73AjRm68YeFMDJsi73AjRm6e4TysPrMIT34bfm7e4TysPrMIT34bfm7UigQPPrMIT3/bfm7UigQPPrMIT3/bfm768XnO1XaOj2+2MS768XnO1XaOj2+2MS768XnO1XaOj2+2MS7GCVbsug8k70xyhK9GCVbsug8k70xyhK9ZnprMTJsi73gZLs7ZnprMTJsi73gZLs7GtM0PDJsi70yyhK9GtM0PDJsi70yyhK9GtM0PDJsi70yyhK9ZnprMeg8k73gZLs7ZnprMeg8k73gZLs7GtM0POg8k70yyhK9GtM0POg8k70yyhK9GtM0POg8k70yyhK9J9M0PDJsi70OV1g7J9M0PDJsi70OV1g7hjYNPDJsi73ZZLs7hjYNPDJsi73ZZLs7hjYNPDJsi73ZZLs7hjYNPOg8k73ZZLs7hjYNPOg8k73ZZLs7hjYNPOg8k73ZZLs7J9M0POg8k70OV1g7J9M0POg8k70OV1g7pMJFMniwDz2G69g8pMJFMniwDz2G69g8XigQPHiwDz2E69g8XigQPHiwDz2E69g8XigQPHiwDz2E69g8/cXnO1XaOj0RUpY8/cXnO1XaOj0RUpY8/cXnO1XaOj0RUpY8N8mrO1XaOj282MS7N8mrO1XaOj282MS7N8mrO1XaOj282MS78VPkO/rMIT3+bfm78VPkO/rMIT3+bfm78VPkO/rMIT3+bfm7ScmrO1XaOj0RUpY8ScmrO1XaOj0RUpY8ScmrO1XaOj0RUpY8N28+MtGAFT0S8888N28+MtGAFT0S8888ClTkO9GAFT0R8888ClTkO9GAFT0R8888ClTkO9GAFT0R888881PkO/rMIT0e2ay781PkO/rMIT0e2ay781PkO/rMIT0e2ay7zt5qsPrMIT0Y2ay7zt5qsPrMIT0Y2ay74ZAnMqlpuzxy8rM84ZAnMqlpuzxy8rM8B1TkO6lpuzxx8rM8B1TkO6lpuzxx8rM8B1TkO6lpuzxx8rM88FPkO/sB1DzPbQ688FPkO/sB1DzPbQ688FPkO/sB1DzPbQ68DDEWsfsB1DzMbQ68DDEWsfsB1DzMbQ68UigQPKdTLj1fI9+7UigQPKdTLj1fI9+78lPkO6dTLj3u2Li7B1TkO5MtKD2RIrM8B1TkO5MtKD2RIrM88VPkO6dTLj1eI9+78VPkO6dTLj1eI9+7XCgQPGdFJT3Knrc8XCgQPGdFJT3Knrc8BIEAAP9/fr8AAMzlAgGAQAAA/H4CAX6/BIEAAP9/fr84m/x+AgF+vwGA/H4CAX6/AAD/fwAAfr8EgQAA/39+vzib/H4CAX6/UKdKJQGBfr84m/x+AgF+vwAA/38CAX6/BIEAAP9/fr8BgPx+AgF+vwAA/38CAX6/BIEAAP9/fr8BgPx+AgF+vwAAAYACAYBATqYAAEmlfr8AAPx+AgF+v7baAACy2X6/ttoAAAAAWi0AAPx+AgF+v7baAACy2X6/ttoAAAAAWi0AAASBAgGAQE6mAABJpX6/AAAEgQIBgEAEgQAA/39+vwAAzOUCAYBAAABuNwIBgEBQp0olA4J+vwAAbjcAAIBAAAD/fwAAfr84m/x+AgF+vwAA/38CAX6/rFau1gGBgEA4m/x+AgF+vwAA/38CAX6//H4AAP9/gEAAAG43AgGAQAAA/38AAH6/rlew1wGBgEA2mvx+AgF+vwAAbjcCAYBA/38AAP9/gEAAAP9/AgF+vwAAzuYCAYBA/H4AAP9/gEA2mvx+AgF+vwAA5nMCAX6//38AAP9/gEAAAOZzAgF+vwAAzuYCAYBA/38AAP9/gEAslSYT/39+vzib/H4CAX6/zGbO5v9/gEAAAG43AgGAQOJx5PH/f4BAOJv8fgIBfr/QaNTp/3+AQByNGAz/f36/AABuNwIBgEABgPx+AgF+vzib/H4CAX6/AADM5QIBgEAAAPx+AgF+v/9/AAD/f4BAOJv8fgIBfr8EgQSBAgF+vwAA/H4CAX6//38AAP9/gEAAAPx+AgF+vwAAzOUCAYBAOJv8fgIBfr8AAP9/AgF+vzib/H4CAX6//H4AAP9/gEA4m/x+AgF+vwAA/38CAX6/sFhKJf1+gEAEgQSBAgF+vwAABIECAYBAAAD8fgIBfr8AAAAAAgGAQASBBIECAX6/AAD8fgIBfr//fwAA/3+AQAAAAAACAYBAAAAEgQIBgEAEgQSBAgF+vwAAAYACAYBA/38AAP9/gEAAAPx+AgF+v7JZAAC1WoBAAAD8fgIBfr9KJQAATCaAQEolAABMJoBAAAAEgQIBgEBKJQAATCaAQEolAABMJoBAAAAEgQIBgECyWQAAtVqAQAAAbjcCAYBAAADM5QIBgEAAAMzlAgGAQAAAbjcCAYBA/38AAP9/gEAAAG43AACAQAAA/38AAH6/sFhKJft9gEBUqa7W/X5+vzib/H4CAX6/AAD/fwIBfr8EgQAA/39+vzib/H4CAX6/AAD8fgIBfr9SqLDX/X5+vwAAbjcCAYBAAAD/fwAAfr82mvx+AgF+vwAAbjcCAYBABIEAAP9/fr82mvx+AgF+vwAAbjcCAYBABIEAAP9/fr8AAPx+AgF+vwAAzuYCAYBAAAD/fwIBfr8AAM7mAgGAQDaa/H4CAX6/AADmcwIBfr8EgQAA/39+vzaa/H4CAX6/AADmcwIBfr8EgQAA/39+vwAA5nMCAX6/AADO5gIBgEAAAOZzAgF+vwAAzuYCAYBAOJv8fgIBfr/UaiYT/3+AQDSZzub/f36/Ho7k8f9/fr8AAG43AgGAQDCX1On/f36/OJv8fgIBfr8AAG43AgGAQORyGAz/f4BA")
}]

[sub_resource type="ArrayMesh" id="6"]
resource_name = "Pistol_9mm"
_surfaces = [{
"aabb": AABB(-0.00492354, -0.00568521, -0.00988114, 0.00984708, 0.0113704, 0.0257533),
"attribute_data": PackedByteArray("AKDDPQBg+DwAgKQ8AIAXPQAgwT0AIP48AMB9PABgIj0AIME9AMAEPQDAfTwAIDg9AKDDPQDABz0AgKQ8AOBCPQAgxj0AwAQ9ACDKPAAgOD0AIMY9ACD+PAAgyjwAYCI9AMA8PADAjDwAADk9AIBBPQAAvz0AAP48ACDFPQBABz0AwDw8AMCMPAAAOT0AABk9AAC/PQAA/jwAIMU9ACD5PACApDwAwIw8AKDDPQAA/jwAoOo8AMCMPAAAOT0AABk9ACDFPQAg+TwAYMg9AAD+PACApDwAwIw8AKDDPQAA/jwAoOo8AMCMPAAAOT0AgEE9ACDFPQBABz0AYMg9AAD+PADgxz0AAAc9ACDIPQBA8zwAwMY9ACDmPADAxj0AgAU9ACDLPQCABT0AoMM9AEDzPACgwz0AIOY8AKDDPQAgCT0A4Mc9AMD5PAAgyD0AQPM8AMDGPQAg5jwAwMY9AMD8PAAgyz0AwPw8AKDDPQBA8zwAoMM9ACDmPACgwz0AgPU8AEC/PQBA8zwA4Mc9AMD5PACAwD0AIOY8AIDAPQDA/DwAIMs9AMD8PACgwz0A4AE9AEC/PQBA8zwA4Mc9AAAHPQCAwD0AIOY8AIDAPQCABT0AIMs9AIAFPQDAPDwAYD49AECCPACAQT0AQLU9AEAHPQAAvz0A4B49AICkPABgPj0AoMM9AOAePQBAgjwAgEE9AKDqPABgPj0AQLU9AEAHPQBgyD0A4B49AMA8PABgPj0AQII8AAAZPQBAtT0AIPk8AAC/PQDgHj0AgKQ8AGA+PQCgwz0A4B49AECCPAAAGT0AoOo8AGA+PQBAtT0AIPk8AGDIPQDgHj0AwDw8AMA2PQCAkTwAABk9AEC2PQAg+TwAAL89AMAcPQCApDwAwDY9AKDDPQDAHD0AgJE8AAAZPQCg6jwAwDY9AEC2PQAg+TwAYMg9AMAcPQDAPDwAwDY9AICRPACAQT0AQLY9AEAHPQAAvz0AwBw9AICkPADANj0AoMM9AMAcPQCAkTwAgEE9AKDqPADANj0AQLY9AEAHPQBgyD0AwBw9AMA8PAAAGT0AwDw8AKBGPQCAYzwAABk9AICkPACgBD0AgKQ8AKBGPQDAPDwAgEE9AMA8PACgRj0AgGM8AIBBPQCApDwAwFU9AICkPACgRj0AgGM8AIBBPQCg6jwAoEY9AKDqPACAQT0AgGM8AAAZPQCg6jwAoEY9AKDqPAAAGT0="),
"format": 34359742487,
"index_count": 246,
"index_data": PackedByteArray("AAAEAAIABAAIAAYACAAAAAoABAAAAAgAHwAlABsAHwAhACUADwAxABMADwA3ADEAGwA2AA4AGwAlADYAFQApABkAFQAtACkAEgAtABUAEgAwAC0AUwAWAFYAUwAUABYAVQAdAF8AVQAXAB0AYAAaAF0AYAAcABoAXQAMAFkAXQAaAAwAWgARAFAAWgANABEATwAUAFMATwAQABQAGAAgAB4AGAAoACAANQAvADMALgAwADIALgAtADAANQAjACsAJAAoACwAJAAgACgANQA5ACcAOAAlACYAOAA2ACUANQAzADkANAA3ADoANAAxADcANQArAC8AKgAtAC4AKgApAC0ANQAnACMAJgAhACIAJgAlACEAZABJAGcAZABFAEkAagBGAGUAagA8AEYAbAA7AGkAbAA/ADsAbgA/AGwAbgBCAD8AcABBAG0AcABLAEEAZwBMAHEAZwBJAEwASABUAEoASABSAFQAPQBRAEcAPQBbAFEAQABcAD4AQABeAFwARABeAEAARABiAF4ATQBhAEMATQBXAGEASgBYAE4ASgBUAFgAAwBmAAEAAwBjAGYABQBjAAMABQBoAGMABwBoAAUABwBrAGgACQBrAAcACQBvAGsACwBvAAkACwByAG8AAQByAAsAAQBmAHIA"),
"material": ExtResource("3"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 115,
"vertex_data": PackedByteArray("IBowsjD5Rzt85CG8IBowsjD5Rzt85CG8ny4tOwD5xzp95CG8ny4tOwD5xzp95CG8nS4tO8D5x7p95CG8nS4tO8D5x7p95CG8ItgospD5R7t85CG8ItgospD5R7t85CG8+y4tu6D5x7pz5CG8+y4tu6D5x7pz5CG8+y4tuwD5xzpz5CG8+y4tuwD5xzpz5CG8o1WhO/BKOrs69QQ8o1WhO/BKOrs69QQ8o1WhO/BKOrs69QQ8o1WhO/BKOrs69QQ8pVWhO+BKOjs69QQ8pVWhO+BKOjs69QQ8pVWhO+BKOjs69QQ8pVWhO+BKOjs69QQ8ZFhAMuBKujs89QQ8ZFhAMuBKujs89QQ8dVWhu+BKOjtG9QQ8dVWhu+BKOjtG9QQ8dVWhu+BKOjtG9QQ8dVWhu+BKOjtG9QQ8nEI+MvRKurs89QQ8nEI+MvRKurs89QQ8dlWhu+BKOrtG9QQ8dlWhu+BKOrtG9QQ8dlWhu+BKOrtG9QQ8dlWhu+BKOrtG9QQ8w0mYu/DYL7v2YTM8w0mYu/DYL7v2YTM8Jl5Xu6Cv+Lo5bGw8Jl5Xu6Cv+Lo5bGw8Jl5Xu6Cv+Lo5bGw8O/9QMgjZr7vsYTM8TjFiMrCveLs4bGw8TjFiMrCveLs4bGw8wkmYu/DYLzv2YTM8wkmYu/DYLzv2YTM8Fl5Xu4Cv+Do5bGw8Fl5Xu4Cv+Do5bGw8Fl5Xu4Cv+Do5bGw8F/dSMvDYrzvsYTM8ILBqMqCveDs4bGw8ILBqMqCveDs4bGw89kmYO/DYLzvqYTM89kmYO/DYLzvqYTM8i15XO4Cv+Do7bGw8i15XO4Cv+Do7bGw8i15XO4Cv+Do7bGw8liiLMgAAgLFYBoI89EmYOwDZL7vqYTM89EmYOwDZL7vqYTM8kl5XO8Cv+Lo7bGw8kl5XO8Cv+Lo7bGw8kl5XO8Cv+Lo7bGw8eFWhOxBLOrvC6g68eFWhOxBLOrvC6g68eFWhOxBLOrvC6g68eFWhOxBLOrvC6g68pHkasgBLurvA6g68pHkasgBLurvA6g68oVWhuwBLOru26g68oVWhuwBLOru26g68oVWhuwBLOru26g68oVWhuwBLOru26g68elWhO8BKOjvC6g68elWhO8BKOjvC6g68elWhO8BKOjvC6g68elWhO8BKOjvC6g683GMYstBKujvA6g683GMYstBKujvA6g68oFWhu8BKOju26g68oFWhu8BKOju26g68oFWhu8BKOju26g68oFWhu8BKOju26g68fVWhO8BKOjtkzfq7fVWhO8BKOjtkzfq7fVWhO8BKOjtkzfq7fVWhO8BKOjtkzfq7i4ACstBKujtgzfq7i4ACstBKujtgzfq7nVWhu8BKOjtMzfq7nVWhu8BKOjtMzfq7nVWhu8BKOjtMzfq7nVWhu8BKOjtMzfq7e1WhOxBLOrtkzfq7e1WhOxBLOrtkzfq7e1WhOxBLOrtkzfq7e1WhOxBLOrtkzfq7U5YEsgBLurtgzfq7U5YEsgBLurtgzfq7nlWhuwBLOrtMzfq7nlWhuwBLOrtMzfq7nlWhuwBLOrtMzfq7nlWhuwBLOrtMzfq7d1WhO8BKOjt+5CG8d1WhO8BKOjt+5CG8d1WhO8BKOjt+5CG8IBowstBKujt85CG8IBowstBKujt85CG8dVWhOxBLOrt+5CG8dVWhOxBLOrt+5CG8dVWhOxBLOrt+5CG85y8ysgBLurt85CG85y8ysgBLurt85CG8pFWhuwBLOrty5CG8pFWhuwBLOrty5CG8pFWhuwBLOrty5CG8o1Whu8BKOjty5CG8o1Whu8BKOjty5CG8o1Whu8BKOjty5CG8BIH8fgIBfr8EgQSBAgF+vwSB/H4CAX6/BIEEgQIBfr8Egfx+AgF+vwSB/H4CAX6/BIH8fgIBfr8Egfx+AgF+vwSB/H4CAX6/BIH8fgIBfr8Egfx+AgF+vwSBBIECAX6/mk2o06RSz2eaTajT9Xp8PppNqNOkUs9nmk2o0+93gkGaTVgspFLM5ppNWCz1eoRCmk1YLKRSzOaaTVgs73d+PwAA8HgCAX6/AADweAIBfr9mslgsnk8rlmayWCwJhXq9ZrJYLA+IgMBmslgsnk8rlgAAEIcAAIBAAAAQhwIBgEBmsqjTnk8uF2ayqNMJhYLBZrKo0w+IfL5msqjTnk8uF3q8stg1m4LBeryy2I5HLhegz8rkbDY2G6DPyuQcDj4foM/K5Gy2isUAADibAgGAQAAAfL0CAYBAAAB8vQIBgEB6vE4nNZt6vXq8TieORyuWoM82G2w2M5qgzzYbHA7DYaDPNhtstnK5AADIZAIBfr8AAIRCAgF+vwAAhEICAYBAhkNOJ6ZTxOKGQ04nyWSEQmAwNhuWS7TaYDA2G4RCcjlgMDYbkkmMRgAAAAACAYBAhkOy2KZTx2OGQ7LYyWR8PmAwyuSWS7dbYDDK5IRCjkdgMMrkkkl0OqBQpNGiUdFooFCk0f9/gECgUKTR/3+AQKBQpNGiUdFoAAAEgQIBgEAAAASBAgGAQGCvpNH/f36/YK+k0aJRMBhgr6TR/39+v2CvpNGiUTAYoFBcLqJRzuegUFwu/3+AQKBQXC7/f4BAoFBcLqJRzucAAP9/AgF+vwAA/38CAX6/YK9cLv9/fr9gr1wuolEtl2CvXC7/f36/YK9cLqJRLZegUFwuolHO56BQXC7/f4BAoFBcLv9/gECgUFwuolHO5wAA/H4CAX6/AAD8fgIBfr9gr1wu/39+v2CvXC6iUS2XYK9cLv9/fr9gr1wuolEtl6BQpNGiUdFooFCk0f9/gECgUKTR/3+AQKBQpNGiUdFoAAAEgQIBgEAAAASBAgGAQGCvpNH/f36/YK+k0aJRMBhgr6TR/39+v2CvpNGiUTAYBIEEgQIBfr+gUFwuolHO56BQXC7/f4BABIEEgQIBfr8AAPx+AgF+vwSB/H4CAX6/oFCk0aJR0WigUKTR/3+AQASB/H4CAX6/AAAEgQIBgEBgr6TR/39+v2CvpNGiUTAYBIH8fgIBfr9gr1wu/39+v2CvXC6iUS2XBIEEgQIBfr8=")
}]

[node name="Magazine" groups=["Magazine"] instance=ExtResource("2")]
script = ExtResource("8")
collisions_enabled = true
release_mode = 0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0148341, -0.00412059)
shape = SubResource("7")

[node name="MagazineMesh" type="MeshInstance3D" parent="." index="1"]
mesh = SubResource("4")

[node name="Bullet01" type="MeshInstance3D" parent="MagazineMesh" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0398629, 0.00712615)
mesh = SubResource("6")

[node name="Bullet02" type="MeshInstance3D" parent="MagazineMesh" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0300588, 0.00712615)
mesh = SubResource("6")

[node name="GrabPointHandLeft" parent="." index="2" instance=ExtResource("4")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.011432, 0, 0.0791288)

[node name="GrabPointHandRight" parent="." index="3" instance=ExtResource("5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0146566, 0, 0.0821186)

[node name="GrabPointSnap" parent="." index="4" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0.01)

[node name="XRToolsHighlightVisible" type="Node3D" parent="." index="5"]
script = ExtResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XRToolsHighlightVisible" index="0"]
material_override = ExtResource("8_cxkev")
mesh = SubResource("4")
